changed img file names
changed img file names to capitilized file extensions

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="hello.css">
 <body title = "UCD Fixed Gear">
   <center>
-<img src = "UCDFG_LOGO.png" title = "UCDFG" />
+<img src = "UCDFG_LOGO.PNG" title = "UCDFG" />
 
 
 <h1> UC DAVIS FIXED GEAR </h1>
@@ -16,10 +16,10 @@
 
 
 <div class = "inner">
-<img src = "wheeltalk.jpg" width = "375" height = " 275" title = "SWAG BRUH" />
-<img src = "560x.jpg" width = "375" height = " 275" title = "SWAG BRUH" />
-<img src = "unnamed.jpg" width = "275" height = "275" title = "SWAG BRUH" />
-<img src = "bigair.jpg" width = "350" height = "275" title = "SWAG BRUH" />
+<img src = "wheeltalk.JPG" width = "375" height = " 275" title = "SWAG BRUH" />
+<img src = "560x.JPG" width = "375" height = " 275" title = "SWAG BRUH" />
+<img src = "unnamed.JPG" width = "275" height = "275" title = "SWAG BRUH" />
+<img src = "bigair.JPG" width = "350" height = "275" title = "SWAG BRUH" />
 
 </div>
 
