--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 
 <div class = "inner">
-<img src = "wheeltalk.jpg" width = "375" height = " 275" title = "SWAG BRUH" />
-<img src = "560x.jpg" width = "375" height = " 275" title = "SWAG BRUH" />
-<img src = "unnamed.jpg" width = "275" height = "275" title = "SWAG BRUH" />
-<img src = "bigair.jpg" width = "350" height = "275" title = "SWAG BRUH" />
+<img src = "wheeltalk.JPG" width = "375" height = " 275" title = "SWAG BRUH" />
+<img src = "560x.JPG" width = "375" height = " 275" title = "SWAG BRUH" />
+<img src = "unnamed.JPG" width = "275" height = "275" title = "SWAG BRUH" />
+<img src = "bigair.JPG" width = "350" height = "275" title = "SWAG BRUH" />
 
 </div>
 
