updated html with a youtube link

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <link rel="stylesheet" type="text/css" href="hello.css">
 <body title = "UCD Fixed Gear">
   <center>
-<img src = "UCDFG_LOGO.png" title = "UCDFG" />
+<div class="mainlogo">
+<img src = "UCDFG_LOGO.png"  title = "UCDFG" />
+</div>
 
 
 <h1> UC DAVIS FIXED GEAR </h1>
@@ -16,10 +18,10 @@
 
 
 <div class = "inner">
-<img src = "wheeltalk.JPG" width = "375" height = " 275" title = "SWAG BRUH" />
-<img src = "560x.JPG" width = "375" height = " 275" title = "SWAG BRUH" />
-<img src = "unnamed.JPG" width = "275" height = "275" title = "SWAG BRUH" />
-<img src = "bigair.JPG" width = "350" height = "275" title = "SWAG BRUH" />
+<img src = "wheeltalk.jpg" width = "375" height = " 275" title = "SWAG BRUH" />
+<img src = "560x.jpg" width = "375" height = " 275" title = "SWAG BRUH" />
+<img src = "unnamed.jpg" width = "275" height = "275" title = "SWAG BRUH" />
+<img src = "bigair.jpg" width = "350" height = "275" title = "SWAG BRUH" />
 
 </div>
 
@@ -30,8 +32,12 @@ UCD Fixed Gear is a place for gangstas and bros
 <center>
 <div class = "outer">
 <div class = "second">
+  <div class = "second">
 <p>
   We enjoy to ride bikes fast. zoom zoom.
+</div>
+  <iframe width="420" height="345" src="https://www.youtube.com/embed/PueqbgOiVKA">
+</iframe>
 </p>
 </center>
 </div>
@@ -39,7 +45,7 @@ UCD Fixed Gear is a place for gangstas and bros
 
 <center>
   <p>
-    <img src = "UCDFG_LOGO.png" width = "200" height = "120" title = "UCDFG" />
+    <img src = "UCDFG_LOGO.png" width = "120" height = "120" title = "UCDFG" />
   </p>
   <p>
     UCD Fixed Gear Davis, CA
