--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
 
 <div class = "inner">
-<img src = "wheeltalk.jpg" width = "375" height = " 275" title = "wheeltalk" />
-<img src = "560x.jpg" width = "375" height = " 275" title = "560x" />
-<img src = "unnamed.jpg" width = "275" height = "275" />
-<img src = "bigair.jpg" width = "350" height = "275" title = "big_air" />
+<img src = "wheeltalk.JPG" width = "375" height = " 275" title = "wheeltalk" />
+<img src = "560x.JPG" width = "375" height = " 275" title = "560x" />
+<img src = "unnamed.JPG" width = "275" height = "275" />
+<img src = "bigair.JPG" width = "350" height = "275" title = "big_air" />
 
 </div>
 
