--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@ UCD Fixed Gear is a place for gangstas and bros
 
 <center>
   <p>
+    <a href="Julian.html">
     <img src = "UCDFG_LOGO.png" width = "120" height = "120" title = "UCDFG" />
+    </a>
   </p>
   <p>
     UCD Fixed Gear Davis, CA
