--- a/index.html
+++ b/index.html
@@ -1,59 +1,76 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="hello.css">
-<body title = "UCD Fixed Gear">
-  <center>
-<div class="mainlogo">
-<img src = "UCDFG_LOGO.png"  title = "UCDFG" />
+<head>
+  <title>Julian Reyes</title>
+
+  <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://kit.fontawesome.com/7529a9a100.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Raleway:400,700,700i,800,800i|Source+Sans+Pro:300i,400,600,700,900&display=swap" rel="stylesheet">
+<!-- <link rel="stylesheet" href="gallery.css"> -->
+<link rel="stylesheet" href="Julian.css">
+</head>
+<body>
+
+
+  <!-- <div class="container"> -->
+    <div style="padding-left: 75px;" class="jumbotron">
+      <h1> <i class="fas fa-laptop-code"></i> Julian Reyes</h1>
+      <h4>UC Davis - Computer Science; Nuerobiology, Physiology and Behavior</h4>
+    </div>
+  <!-- </div> -->
+
+  <nav style="width: 100%;" class="navbar navbar-inverse">
+    <div  class="container">
+
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+
+      <a href="#" class="navbar-brand"> <i class="fas fa-home"></i></span> Home</a>
+    </div>
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+    <ul class="nav navbar-nav">
+      <li> <a href="#"><i class="far fa-address-card"></i> About</a> </li>
+      <li> <a href="#"><i class="far fa-address-book"></i> Contact</a> </li>
+      <li> <a href="projects.html"> <i class="fas fa-layer-group"></i> Projects <i class="fab fa-connectdevelop"></i></a></li>
+      <li> <a href="https://www.linkedin.com/in/julian-reyes-1b2727190/"> <i class="fab fa-linkedin"></i> LinkedIn </a></li>
+
+
+    </ul>
+
+    <ul class="nav navbar-nav navbar-right">
+      <li> <a href="#"><i class="far fa-file-alt"></i> Cover Letter</a></li>
+      <li> <a href="#"><i class="far fa-id-badge"></i> Resume</a> </li>
+    </ul>
+  </div>
+  </div>
+
+  </nav>
+  <!-- <a href="http://sites.google.com" title="Google Sites - free websites and wikis"><img src="http://www.google.com/a/help/intl/en/images/sites_35.gif" border="0" alt="Google Sites"></a> -->
+
+
+<div style="padding-left: 100px;padding-right: 100px;" class="container2">
+  <h1 class="text-center">Summary</h1>
+
+<div  style="padding-left: 100px;padding-right: 100px; " class="jumbotron">
+  <p style="font-size: 1.2em;">    Dedicated, motivated bilingual Bioinformatician highly regarded progressive, diverse experience in full stack web development, computer programming, bioinformatics, information processing, machine learning, and life sciences. Proven track record of delivering streamlined custom software solutions to meet complex business requirements in competitive markets. Respected as a motivational, influential, and detail-oriented leader and collaborator who guides team members in achieving on-time, budget-conscious project completion while exceeding all expectations. Builds and maintains productive professional relationships with colleagues and clients, driving business objectives through a people-focused approach. Exceptional academic qualifications include a Bachelor of Science in Neurobiology, Physiology, and Behavior and a Minor in Computer Science from the University of California – Davis. Out-of-the-box thinker committed to implementing continuous process improvements to enable growth.</p>
+
+I look forward to meeting you; You can reach me at julian.edward.reyes@gmail.com
+</div>
 </div>
 
 
-<h1> UC DAVIS FIXED GEAR </h1>
-</center>
-
-<div class = "header">
-<p>
-</p>
-</div>
 
 
-<div class = "inner">
-<img src = "wheeltalk.JPG" width = "375" height = " 275" title = "wheeltalk" />
-<img src = "560x.JPG" width = "375" height = " 275" title = "560x" />
-<img src = "unnamed.JPG" width = "275" height = "275" />
-<img src = "bigair.JPG" width = "350" height = "275" title = "big_air" />
-
-</div>
-
-<p>
-UCD Fixed Gear is a place for gangstas and bros
-</p>
-
-<center>
-<div class = "outer">
-<div class = "second">
-  <div class = "second">
-<p>
-  We enjoy to ride bikes fast. zoom zoom.
-</div>
-  <iframe width="420" height="345" src="https://www.youtube.com/embed/PueqbgOiVKA">
-</iframe>
-</p>
-</center>
-</div>
-</div>
-
-<center>
-  <p>
-    <a href="Julian.html">
-    <img src = "UCDFG_LOGO.png" width = "120" height = "120" title = "UCDFG" />
-    </a>
-  </p>
-  <p>
-    UCD Fixed Gear Davis, CA
-  </p>
-</center>
-
+<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 </body>
 </html>
