--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <ul class="nav navbar-nav navbar-right">
       <li> <a href="#"><i class="far fa-file-alt"></i> Cover Letter</a></li>
-      <li> <a href="#"><i class="far fa-id-badge"></i> Resume</a> </li>
+      <li> <a href="resume.html"><i class="far fa-id-badge"></i> Resume</a> </li>
     </ul>
   </div>
   </div>
