Spelling Mistake - h1 Commit
fixed mispelled 'Neurobiology' in the h1 in the header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- <div class="container"> -->
     <div style="padding-left: 75px;" class="jumbotron">
       <h1> <i class="fas fa-laptop-code"></i> Julian Reyes</h1>
-      <h4>UC Davis - Computer Science; Nuerobiology, Physiology and Behavior</h4>
+      <h4>UC Davis - Computer Science; Neurobiology, Physiology and Behavior</h4>
     </div>
   <!-- </div> -->
 
