Notice Removal Commit
Changing the notice about the D3 visualization to say that it might not work

--- a/projects.html
+++ b/projects.html
@@ -49,8 +49,8 @@
 <div class="main">
   <div class="">
   <p>Project 1: Heart Disease Data</p>
-  <em><p style="color:red;font-size:1.2em;">Notice: <u style="color:red;">Must</u> use Firefox Browser</p>
-  <p style="color:red;font-size:1.2em;">Will <u style="color:red;">NOT</u> work with chrome,edge, or safari</p></em>
+  <em><p style="color:red;font-size:1.2em;">Note: <u style="color:red;">Recommended</u> to use Firefox Browser</p>
+  <p style="color:red;font-size:1.2em;">May not work with chrome,edge, or safari</p></em>
 
 
   <p style="font-size: 1em;">Made with D3 for Visualization/Information Interfaces</p>
