--- a/projects.html
+++ b/projects.html
@@ -105,7 +105,7 @@
 <div class="jumbotron">
 <div class="main">
   <div class="">
-  <p>Project 4: My own business: Automotive Detailing</p>
+  <p>Project 4: Automotive Detailing</p>
   <p style="font-size: 1em;">Made with Bootstap, HTML, css</p>
 </div>
   <div class="main3">
