--- a/projects.html
+++ b/projects.html
@@ -62,13 +62,29 @@
 </div>
 </div></a>
 
+<a href="CoSign/home.html">
+<div class="container">
+<div class="jumbotron">
+<div class="main">
+  <div class="">
+  <p>Project 2: Music App</p>
+  <p style="font-size: 1em; color: red;">Created on August 6, 2019 for a music information platform,</p>
+
+    <p style="font-size: 1em;">Lead Web Developer</p>
+</div>
+  <div class="mainmusic">
+  </div> <img style="height: 200px;" src="music.png" alt="">
+</div>
+</div>
+</div>
+</a>
 
 <a href="JDM_5/index.html">
 <div class="container">
 <div class="jumbotron">
 <div class="main">
   <div class="">
-  <p>Project 2: Musuem of JDM</p>
+  <p>Project 3: Musuem of JDM</p>
   <p style="font-size: 1em;">Made with Bootsrap, HTML, css</p>
   <p style="font-size: 1em;">Web Deveoper Bootcamp</p>
 
@@ -83,21 +99,7 @@
 
 
 
-<div class="container">
-<div class="jumbotron">
-<div class="main">
-  <div class="">
-  <p>Project 3: Music App</p>
-  <u style="color:red;"><p style="font-size: 1em; color: red;">Due to potentially sensitive information,
-    please contact me personally, </p>
-    <p style="font-size: 1em; color: red;">or Amir Beck, our Project Manager, if you wish to know more; Thank You.</p></u>
-    <p style="font-size: 1em;">Full Stack Software Engineer</p>
-</div>
-  <div class="mainmusic">
-  </div> <img style="height: 200px;" src="music.png" alt="">
-</div>
-</div>
-</div>
+
 
 
 <a href="JuliansDetailing.html">
