--- a/projects.html
+++ b/projects.html
@@ -68,11 +68,11 @@
 <div class="main">
   <div class="">
   <p>Project 2: Music App</p>
-  <p style="font-size: 1em; color: red;">Created on August 6, 2019 for a music information platform,</p>
+  <p style="font-size: 1em;">Created on August 6, 2019 for a music information platform,</p>
 
     <p style="font-size: 1em;">Lead Web Developer</p>
 </div>
-  <div class="mainmusic">
+  <div class="maingame">
   </div> <img style="height: 200px;" src="music.png" alt="">
 </div>
 </div>
