--- a/projects.html
+++ b/projects.html
@@ -68,7 +68,7 @@
 <div class="main">
   <div class="">
   <p>Project 2: Music App</p>
-  <p style="font-size: 1em;">Created on August 6, 2019 for a music information platform,</p>
+  <p style="font-size: 1em;">Created on August 6, 2019 for CoSign, a music information platform.</p>
 
     <p style="font-size: 1em;">Lead Web Developer</p>
 </div>
