--- a/projects.html
+++ b/projects.html
@@ -72,7 +72,7 @@
 
     <p style="font-size: 1em;">Lead Web Developer</p>
 </div>
-  <div class="maingame">
+  <div class="main5">
   </div> <img style="height: 200px;" src="music.png" alt="">
 </div>
 </div>
