Edits to Projects.html
Edited Vestige description, putting a small summary of what they are. Also added "UC Davis - " in front of my class names to convey that they were class assignments. Also toned down the warning message about the interactive interface not working on other browsers. Seems to work fine. Put UCDG project as a personal project rather than an assignment.

--- a/projects.html
+++ b/projects.html
@@ -49,12 +49,12 @@
 <div class="main">
   <div class="">
   <p>Project 1: Heart Disease Data</p>
-  <em><p style="color:red;font-size:1.2em;">Note: <u style="color:red;">Recommended</u> to use Firefox Browser</p>
-  <p style="color:red;font-size:1.2em;">May not work with chrome,edge, or safari</p></em>
+  <em><p style="color:red;font-size:1.1em;">Note: Recommended to use Firefox Browser</p>
+  <p style="color:red;font-size:1.1em;">May not work with chrome, edge, or safari</p></em>
 
 
   <p style="font-size: 1em;">Made with D3 for Visualization/Information Interfaces</p>
-  <p style="font-size: 1em;">ECS163: Interactive Visualization</p>
+  <p style="font-size: 1em;">UC Davis - ECS163: Interactive Visualization</p>
 </div>
   <div class="main1">
   </div> <img style="height: 180px;" src="heart2.png" alt="">
@@ -109,6 +109,8 @@
   <div class="">
   <p>Project 4: Automotive Detailing</p>
   <p style="font-size: 1em;">Made with Bootstap, HTML, css</p>
+  <p style="font-size: 1em;">Work in progress</p>
+
 </div>
   <div class="main4">
   </div> <img src="detailing.png" style="height: 180px;" alt="">
@@ -124,7 +126,7 @@
   <p>Project 5: Video Game made for</p>
   <p> Video Game Development ECS189L</p>
   <p style="font-size: 1em;">Made with Unity. Winter 2019 </p>
-  <p style="font-size: 1em;">ECS189L: Video Game Development</p>
+  <p style="font-size: 1em;">UC Davis - ECS189L: Video Game Development</p>
 </div>
   <div class="maingame">
   </div> <img src="game.png" style="height: 180px;"  alt="">
@@ -137,9 +139,9 @@
 <div class="main">
   <div class="">
   <p>Project 6: Vestige Food Waste Solutions Startup</p>
-  <u style="color:red;"><p style="font-size: 1em; color: red;">Due to potentially sensitive information,
-    please contact me personally, </p>
-    <p style="font-size: 1em; color: red;">or AJ Nowell, our CEO, if you wish to know more; Thank You.</p></u>
+  <p style="font-size: 1em;color: #2477BB"> <i> Vestige is a digital platform that develops and implements</p>
+    <p style="font-size: 1em;color: #2477BB">food waste management solutions for businesses and resteraunts.</i></p>
+    <p style="font-size: 1em;">Please contact me, or AJ Nowell, our CEO for more information</p>
   <p style="font-size: 1em;">Front End Software Developer</p>
 </div>
   <div class="main5">
@@ -227,7 +229,7 @@
   <div class="">
   <p>Project 11: UC Davis Fixed Gear Bike Club</p>
   <p style="font-size: 1em;">My first HTML website</p>
-  <p style="font-size: 1em;">ECS 162: Web Development</p>
+  <p style="font-size: 1em;">Personal Project for local Bike Club</p>
 </div>
   <div class="maingame">
   </div> <img style="height: 200px;" src="UCDFG.png" alt="">
