--- a/projects.html
+++ b/projects.html
@@ -118,7 +118,7 @@
 </div>
 </div></a>
 
-<a href="https://www.youtube.com/watch?v=TFFjlM5qqOs">
+<a href="https://julian-reyes.github.io/2D-Rocket-League/">
 <div class="container">
 <div class="jumbotron">
 <div class="main">
