Updated detailing website
Uploaded nearly finished version of auto detailing website. Also changed the order of some of the projects. Order is now 1)heart 2)detail 3)Videogame 4)music 5)detail 6)vestige 7)JDM

--- a/JuliansDetailing.html
+++ b/JuliansDetailing.html
@@ -25,12 +25,12 @@
 
     <ul class="nav navbar-nav">
       <li> <a href="about.html"> About</a> </li>
-      <li class="disabled"> <a href="#"> Contact</a> </li>
-      <li class="disabled"> <a href="#">Pricing</a> </li>
+      <li > <a href="contact.html"> Contact</a> </li>
+      <li class="disabled"> <a href="#">Packages</a> </li>
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
-      <li class="disabled"> <a href="#">Make an Appointment</a></li>
+      <li > <a href="appt.html">Make an Appointment</a></li>
       <li class="disabled"> <a href="#">Gallery</a> </li>
     </ul>
   </div>
@@ -40,23 +40,24 @@
 
 </div>
 
-<div class="body">
+<div style="padding-left: 50px; padding-right: 50px;" class="body" >
 <div  style="border-right: 3px solid red;padding-left: 35px; padding-right: 100px; height: 100%;" class="col-xs-7 text-center">
   <img src="amg.png" style="height: 120px; padding-left: 0px;" alt="">
 
-  <h2  style="color:red;">Julian's Automotive Detailing</h2>
+  <h2  style="color:red; font-size: 3.0em; border-bottom: 1px solid red;">Julian's Automotive Detailing</h2>
+
   <p>Only the highest quality, guarenteed</p>
 
 <br>
 
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
 
 </div>
 <v>
 
-<div class="col-xs-5 right">
+<div style="padding-top: 0px;" class="col-xs-5 right">
 
 
 <!-- <br> -->
@@ -64,19 +65,137 @@
 <br>
 <br>
 
-  <h3 style="color:red;">Mission Statement</h3>
-  <p>Dedicated to the upmost high-quality service and an unbreakable passion for automobiles, Express Auto Detail
+  <h3 style="color:red; padding-bottom: 15px; padding-right: 45px;">Mission Statement</h3>
+  <p style="padding-top: 30px;">Dedicated to the upmost high-quality service and an unbreakable passion for automobiles, Julian's Auto Detailing
       is your go-to for auto detailing service, with the best prices to stay competitive while still offering
       high-quality work, and just as important, only the best high-qualtiy products as well. Express Auto Detailers
       take pride in thier work, and have carefully experimented and researched to use only the BEST products available
       on the market. Our products are used by the best professionals worldwide, as they are the standard in
       exceptional-quality detailing industry.
  </p>
- <img src="detail1.jpg" style="height: 240px;" alt="">
+ <img src="detail1.jpg" style="height: 180px; border-radius: 25px; margin-top: 105px;" alt="">
 </div>
 
 
 
+</div>
+
+
+<div style="visibility: hidden;" class="">
+
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>text</p>
+</div>
+
+<div style="height: 150px; color: black; margin-bottom: 70px; background-color: lightblue;" class="row">
+
+  <div class="col-xs-4 text-center">
+    <h1>Wash</h1>
+    <!-- <img style="height: 130px;background-color: lightblue;" src="24px.svg" alt=""> -->
+    <img src="carwash3.png" style="height: 125px;" alt="Car Wash by Symbolon from the Noun Project">
+
+
+  </div>
+  <div class="col-xs-4 text-center">
+    <h1>Polish</h1>
+    <!-- <i style="color: black;background-color: lightblue;" class="fas fa-tint-slash fa-8x"></i> -->
+    <img src="towel.png" style="height: 125px;" alt="">
+
+  </div>
+  <div class="col-xs-4 text-center">
+    <h1>Protect</h1>
+
+    <i style="color: black;background-color: lightblue;" class="fas fa-shield-alt fa-8x"></i>
+
+  </div>
+
+
+</div>
+
+
+<div style="background-color: white; " class="row">
+
+  <div class="col-xs-4 text-center">
+    <h1>Vacuum</h1>
+    <img src="vacuum.png" style="height: 125px;" alt="Car Vaccum Cleaning by Symbolon from the Noun Project">
+  </div>
+  <div class="col-xs-4 text-center">
+    <h1>Shampoo</h1>
+    <img src="mat.png" style="height: 125px;" alt="">
+  </div>
+  <div class="col-xs-4 text-center">
+    <h1>Shine</h1>
+    <img src="wipe.png" style="height: 125px;" alt="wiping by Chattapat from the Noun Project">
+  </div>
+
+</div>
+
+
+
+
+
+
+
+<div style="background-color: white; padding-top: 100px; color: black;" class="row">
+  <div style="margin-left: 50px;" class="col-xs-4 text-center">
+    <img src="detail5.jpg" style="height: 300px;" alt="">
+  </div>
+  <div style="margin-left: 100px;" class="col-xs-5 text-center">
+    <h2>Best Prices Guarenteed</h2>
+    <p>We will price match our competition for similar packages</p>
+
+
+  </div>
+
+</div>
+
+<div style="background-color: white; padding-top: 100px;" class="row">
+
+  <div class="col-xs-6 text-center">
+    <h2>Highest Quality Service Guarenteed</h2>
+    <p style="padding-left:50px; padding-right: 50px;">We pride ourselves on using the best products on the market with a high
+    attention to detail to ensure you get the best possibel detail in Sacramento
+  at an affordable price</p>
+  </div>
+  <div style="margin-right: 50px; margin-left: 100px;" class="col-xs-4 text-center">
+    <img src="detail6.jpg" style="height: 250px;" alt="">
+  </div>
+
+</div>
+
+<div style="background-color: white; padding-top: 100px; padding-bottom: 50px;color: black;" class="row">
+  <div style="margin-left: 50px;" class="col-xs-4 text-center">
+    <img src="benz.jpg" style="height: 300px;" alt="">
+  </div>
+  <div style="margin-left: 100px;" class="col-xs-5 text-center">
+    <h2>Customer Satisfaction</h2>
+    <p>Customer satisfaction is our #1 priority. Read our reviews from all of our current and past customers.</p>
+
+
+  </div>
+
+</div>
+
+
+
+
+
+
+<div style="height: 180px; background-color: lightblue;padding-top: 50px; color: #505050;" class="text-center">
+  <div class="">
+    Sacramento, CA
+  </div>
+  <div class="">
+
+      <i class="fab fa-instagram fa-2x"></i> @JuliansAutoDetail
+  </div>
+  <div class="">
+    <a href="https://www.facebook.com/JuliansAutoDetailing/"> <i class="fab fa-facebook-square fa-2x"></i> Julian's Auto Detailing </a>
+  </div>
+  <div class="">
+    <i class="fab fa-snapchat-square fa-2x"></i> @JsDetailing
+  </div>
 </div>
 
 
