--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://kit.fontawesome.com/7529a9a100.js"></script>
     <link rel="stylesheet" href="about.css">
-    <title>About</title>
+    <title>Contact</title>
   </head>
   <body>
 
@@ -30,7 +30,7 @@
 
       <ul class="nav navbar-nav">
         <li> <a href="about.html"> About</a> </li>
-        <li> <a href="contact.html"> Contact</a> </li>
+        <li > <a href="contact.html"> Contact</a> </li>
         <li class="disabled"> <a href="#"> Packages</a> </li>
 
       </ul>
@@ -44,29 +44,18 @@
 
   </nav>
 <div class="container">
-  <h1>About</h1>
+  <h1>Contact</h1>
   <hr>
-  <h3>Mission Statement</h3>
-  <p>Dedicated to the upmost high-quality service and an unbreakable passion for automobiles, Express Auto Detail
-      is your go-to for auto detailing service, with the best prices to stay competitive while still offering
-      high-quality work, and just as important, only the best high-qualtiy products as well. Express Auto Detailers
-      take pride in thier work, and have carefully experimented and researched to use only the BEST products available
-      on the market. Our products are used by the best professionals worldwide, as they are the standard in
-      exceptional-quality detailing industry.
+  <h3>Reach us by email</h3>
+  <p>JuliansAutoDetailing@gmail.com
  </p>
- <h3 >History</h3>
+ <h3 >Phone</h3>
   <p>
-    With an arsenal of experience and a need for a more affordable mobile detailing service, Express Auto Detail
-    was born in Sacramento, CA in 2019. With mutliple friends with their own detailing businesses of their own in
-    the wealthy areas of Southern California, our noble founder had a hefty amount of experience in the auto detailing
-    world where he gained valuable knowledge, skills, resources, and networks. Because of that, Express Auto Detail
-    has expanded to Northern California to serve those in the Sacramento region.
+    (858) 243-7162
   </p>
 
-  <h3 >Our Employees</h3>
-  <p>We are extremely lucky to have the most dedicated, pasisonate, individuals with a deep love for cars
-     as our frontmen. Without them, Express Auto would be no more. The emplyees are the backbone of
-     our company and we are extremely lucky and grateful to have them. </p>
+  <h3 >Facebook</h3>
+  <a href="https://www.facebook.com/JuliansAutoDetailing/">Julian's Auto Detailing </a>
 
 </div>
 
