--- a/projects.html
+++ b/projects.html
@@ -62,13 +62,56 @@
 </div>
 </div></a>
 
+
+
+<a href="JuliansDetailing.html">
+<div class="container">
+<div class="jumbotron">
+<div class="main77">
+  <div class="">
+  <p>Project 2: Automotive Detailing</p>
+  <p style="font-size: 1em;">Mockup website for my personal local business</p>
+
+  <p style="font-size: 1em;">Made with Bootstap, HTML, css</p>
+  <p style="font-size: 1em;">*Work in progress* (not live yet)</p>
+
+</div>
+  <div class="main4">
+  </div> <img src="ssws.png" style="height: 180px;" alt="">
+</div>
+</div>
+</div></a>
+
+
+
+
+<a href="https://julian-reyes.github.io/2D-Rocket-League/">
+<div class="container">
+<div class="jumbotron">
+<div class="main">
+  <div class="">
+  <p>Project 3: Video Game made for</p>
+  <p> Video Game Development ECS189L</p>
+  <p style="font-size: 1em;">*Multiplayer game, use same keyboard* </p>
+  <p style="font-size: 1em;">Player 1 moves with arrows, player 2 with AWSD</p>
+
+
+  <p style="font-size: 1em;">Made with Unity. Winter 2019 </p>
+  <p style="font-size: 1em;">UC Davis - ECS189L: Video Game Development</p>
+</div>
+  <div class="maingame">
+  </div> <img src="game.png" style="height: 180px;"  alt="">
+</div>
+</div>
+</div> </a>
+
 <a href="CoSign/home.html">
 <div class="container">
 <div class="jumbotron">
 <div class="main">
   <div class="">
-  <p>Project 2: Music App</p>
-  <p style="font-size: 1em;">Created on August 6, 2019 for CoSign, a music information platform.</p>
+  <p>Project 4: Music App</p>
+  <p style="font-size: 1em;">Basic landing page mockup for CoSign, a music information platform.</p>
 
     <p style="font-size: 1em;">Lead Web Developer</p>
 </div>
@@ -79,60 +122,27 @@
 </div>
 </a>
 
-<a href="JDM_5/index.html">
+
+<a href="http://www.juliansautodetailing.com/">
 <div class="container">
 <div class="jumbotron">
 <div class="main">
   <div class="">
-  <p>Project 3: Musuem of JDM</p>
-  <p style="font-size: 1em;">Made with Bootsrap, HTML, css</p>
-  <p style="font-size: 1em;">Web Deveoper Bootcamp</p>
+  <p>Project 5: My own business: Automotive Detailing</p>
+  <p style="font-size: 1.2em;">Wil host (Project 2) when website is complete</p>
+  <p style="font-size: 1.2em;">Created in college, started as a friends/neighbor service</p>
+  <p style="font-size: 1.2em;">and decided to expand to a legitimate business</p>
 
+  <p style="font-size: 1em;">Made with AWS, Google Domains, Bootstrap, HTML, css</p>
   <!-- <p style="font-size: 1em;">ECS163</p> -->
 </div>
-  <div class="mainJDM">
-</div> <img src="JDM2.png" style="height: 180px;" alt="">
-
+  <div class="main3">
+  </div> <img style="height: 180px;"  src="maintenance.png" alt="">
 </div>
 </div>
 </div></a>
 
 
-
-
-
-
-<a href="JuliansDetailing.html">
-<div class="container">
-<div class="jumbotron">
-<div class="main">
-  <div class="">
-  <p>Project 4: Automotive Detailing</p>
-  <p style="font-size: 1em;">Made with Bootstap, HTML, css</p>
-  <p style="font-size: 1em;">Work in progress</p>
-
-</div>
-  <div class="main4">
-  </div> <img src="detailing.png" style="height: 180px;" alt="">
-</div>
-</div>
-</div></a>
-
-<a href="https://julian-reyes.github.io/2D-Rocket-League/">
-<div class="container">
-<div class="jumbotron">
-<div class="main">
-  <div class="">
-  <p>Project 5: Video Game made for</p>
-  <p> Video Game Development ECS189L</p>
-  <p style="font-size: 1em;">Made with Unity. Winter 2019 </p>
-  <p style="font-size: 1em;">UC Davis - ECS189L: Video Game Development</p>
-</div>
-  <div class="maingame">
-  </div> <img src="game.png" style="height: 180px;"  alt="">
-</div>
-</div>
-</div> </a>
 
 <div class="container">
 <div class="jumbotron">
@@ -151,27 +161,42 @@
 </div>
 
 
-
-
-
-
-
-<a href="http://www.juliansautodetailing.com.s3-website-us-west-1.amazonaws.com/">
+<a href="JDM_5/index.html">
 <div class="container">
 <div class="jumbotron">
 <div class="main">
   <div class="">
-  <p>Project 7: My own business: Automotive Detailing</p>
-  <p style="font-size: 1.2em;">(Landing Page of Domain Name until Website is complete)</p>
+  <p>Project 7: Musuem of JDM</p>
+  <p style="font-size: 1em;">Made with Bootsrap, HTML, css</p>
+  <p style="font-size: 1em;">Web Deveoper Bootcamp</p>
 
-  <p style="font-size: 1em;">Made with AWS, Google Domains, Bootstrap, HTML, css</p>
   <!-- <p style="font-size: 1em;">ECS163</p> -->
 </div>
-  <div class="main3">
-  </div> <img style="height: 180px;"  src="maintenance.png" alt="">
+  <div class="mainJDM">
+</div> <img src="JDM2.png" style="height: 180px;" alt="">
+
 </div>
 </div>
 </div></a>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <a href="gallery.html">
