--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
     <ul class="nav navbar-nav">
-      <li> <a href="#"><i class="far fa-address-card"></i> About</a> </li>
-      <li> <a href="#"><i class="far fa-address-book"></i> Contact</a> </li>
+      <li class="disabled"> <a href="#"><i class="far fa-address-card"></i> About</a> </li>
+      <li class="disabled"> <a href="#"><i class="far fa-address-book"></i> Contact</a> </li>
       <li> <a href="projects.html"> <i class="fas fa-layer-group"></i> Projects <i class="fab fa-connectdevelop"></i></a></li>
       <li> <a href="https://www.linkedin.com/in/julian-reyes-1b2727190/"> <i class="fab fa-linkedin"></i> LinkedIn </a></li>
 
@@ -46,7 +46,7 @@
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
-      <li> <a href="#"><i class="far fa-file-alt"></i> Cover Letter</a></li>
+      <li class="disabled"> <a href="#"><i class="far fa-file-alt"></i> Cover Letter</a></li>
       <li> <a href="resume.html"><i class="far fa-id-badge"></i> Resume</a> </li>
     </ul>
   </div>
