Added RGB color game
added color game and updated numbers of projects on projects.html since color game is now project #3

--- a/projects.html
+++ b/projects.html
@@ -83,6 +83,23 @@
 </div></a>
 
 
+<a href="colorgame.html">
+<div class="container">
+<div class="jumbotron">
+<div class="main77">
+  <div class="">
+  <p>Project 3: RGB Color Guessing Game</p>
+
+  <p style="font-size: 1em;">Made with JavaSctipt, HTML, and CSS</p>
+
+</div>
+  <div class="main4">
+  </div> <img src="rgb.png" style="height: 180px;" alt="">
+</div>
+</div>
+</div></a>
+
+
 
 
 <a href="https://julian-reyes.github.io/2D-Rocket-League/">
@@ -90,7 +107,7 @@
 <div class="jumbotron">
 <div class="main">
   <div class="">
-  <p>Project 3: Video Game made for</p>
+  <p>Project 4: Video Game made for</p>
   <p> Video Game Development ECS189L</p>
   <p style="font-size: 1em;">*Multiplayer game, use same keyboard* </p>
   <p style="font-size: 1em;">Player 1 moves with arrows, player 2 with AWSD</p>
@@ -110,7 +127,7 @@
 <div class="jumbotron">
 <div class="main">
   <div class="">
-  <p>Project 4: Music App</p>
+  <p>Project 5: Music App</p>
   <p style="font-size: 1em;">Basic landing page mockup for CoSign, a music information platform.</p>
 
     <p style="font-size: 1em;">Lead Web Developer</p>
@@ -128,7 +145,7 @@
 <div class="jumbotron">
 <div class="main">
   <div class="">
-  <p>Project 5: My own business: Automotive Detailing</p>
+  <p>Project 6: My own business: Automotive Detailing</p>
   <p style="font-size: 1.2em;">Wil host (Project 2) when website is complete</p>
   <p style="font-size: 1.2em;">Created in college, started as a friends/neighbor service</p>
   <p style="font-size: 1.2em;">and decided to expand to a legitimate business</p>
@@ -148,7 +165,7 @@
 <div class="jumbotron">
 <div class="main">
   <div class="">
-  <p>Project 6: Vestige Food Waste Solutions Startup</p>
+  <p>Project 7: Vestige Food Waste Solutions Startup</p>
   <p style="font-size: 1em;color: #2477BB"> <i> Vestige is a digital platform that develops and implements</p>
     <p style="font-size: 1em;color: #2477BB">food waste management solutions for businesses and resteraunts.</i></p>
     <p style="font-size: 1em;">Please contact me, or AJ Nowell, our CEO for more information</p>
@@ -166,7 +183,7 @@
 <div class="jumbotron">
 <div class="main">
   <div class="">
-  <p>Project 7: Musuem of JDM</p>
+  <p>Project 8: Musuem of JDM</p>
   <p style="font-size: 1em;">Made with Bootsrap, HTML, css</p>
   <p style="font-size: 1em;">Web Deveoper Bootcamp</p>
 
@@ -204,7 +221,7 @@
 <div class="jumbotron">
 <div class="main">
   <div class="">
-  <p>Project 8: Image Gallery Site</p>
+  <p>Project 9: Image Gallery Site</p>
   <p style="font-size: 1em;">Made with HTML, css</p>
   <p style="font-size: 1em;">Web Deveoper Bootcamp</p>
 </div>
@@ -219,7 +236,7 @@
 <div class="jumbotron">
 <div class="main">
   <div class="">
-  <p>Project 9:Kitten Adoption Landing Page</p>
+  <p>Project 10:Kitten Adoption Landing Page</p>
   <p style="font-size: 1em;">Made HTML, css</p>
   <p style="font-size: 1em;">Web Developer Bootcamp</p>
 </div>
@@ -234,7 +251,7 @@
 <div class="jumbotron">
 <div class="main">
   <div class="">
-  <p>Project 10: Another Gallery site</p>
+  <p>Project 11: Another Gallery site</p>
   <p style="font-size: 1em;">Made HTML, css</p>
   <p style="font-size: 1em;">Web Developer Bootcamp</p>
 </div>
@@ -252,7 +269,7 @@
 <div class="jumbotron">
 <div class="main">
   <div class="">
-  <p>Project 11: UC Davis Fixed Gear Bike Club</p>
+  <p>Project 12: UC Davis Fixed Gear Bike Club</p>
   <p style="font-size: 1em;">My first HTML website</p>
   <p style="font-size: 1em;">Personal Project for local Bike Club</p>
 </div>
