+beat_maker, -links disabled
Added beat maker to projects.html, and removed the inactive links on the navbar on index.html and projects.html

--- a/projects.html
+++ b/projects.html
@@ -27,8 +27,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
     <ul class="nav navbar-nav">
-      <li class="disabled"> <a href="#"><i class="far fa-address-card"></i> About</a> </li>
-      <li class="disabled"> <a href="#"><i class="far fa-address-book"></i> Contact</a> </li>
+      <!-- <li class="disabled"> <a href="#"><i class="far fa-address-card"></i> About</a> </li> -->
+      <!-- <li class="disabled"> <a href="#"><i class="far fa-address-book"></i> Contact</a> </li> -->
       <li> <a href="projects.html"> <i class="fas fa-layer-group"></i> Projects <i class="fab fa-connectdevelop"></i></a></li>
       <li> <a href="https://www.linkedin.com/in/julian-reyes-1b2727190/"> <i class="fab fa-linkedin"></i> LinkedIn </a></li>
 
@@ -36,7 +36,7 @@
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
-      <li class="disabled"> <a href="#"><i class="far fa-file-alt"></i> Cover Letter</a></li>
+      <!-- <li class="disabled"> <a href="#"><i class="far fa-file-alt"></i> Cover Letter</a></li> -->
       <li> <a href="resume.html"><i class="far fa-id-badge"></i> Resume</a> </li>
     </ul>
   </div>
@@ -99,6 +99,22 @@
 </div>
 </div></a>
 
+<a href="beatMaker/beatmaker2.html">
+<div class="container">
+<div class="jumbotron">
+<div class="main77">
+  <div class="">
+  <p>Project 4: Beat_Maker Application</p>
+  <p style="font-size: 1em;">App to make beats using keyboard</p>
+  <p style="font-size: 1em;">Minimum Screen Width: 900 x 1000</p>
+  <p style="font-size: 1em;">Mobile: no</p>
+</div>
+  <div class="main4">
+  </div> <img src="beatMaker/beat_maker.png" style="height: 180px;" alt="">
+</div>
+</div>
+</div></a>
+
 
 
 
@@ -107,7 +123,7 @@
 <div class="jumbotron">
 <div class="main">
   <div class="">
-  <p>Project 4: Video Game made for</p>
+  <p>Project 5: Video Game made for</p>
   <p> Video Game Development ECS189L</p>
   <p style="font-size: 1em;">*Multiplayer game, use same keyboard* </p>
   <p style="font-size: 1em;">Player 1 moves with arrows, player 2 with AWSD</p>
@@ -127,7 +143,7 @@
 <div class="jumbotron">
 <div class="main">
   <div class="">
-  <p>Project 5: Music App</p>
+  <p>Project 6: Music App</p>
   <p style="font-size: 1em;">Basic landing page mockup for CoSign, a music information platform.</p>
 
     <p style="font-size: 1em;">Lead Web Developer</p>
@@ -145,7 +161,7 @@
 <div class="jumbotron">
 <div class="main">
   <div class="">
-  <p>Project 6: My own business: Automotive Detailing</p>
+  <p>Project 7: My own business: Automotive Detailing</p>
   <p style="font-size: 1.2em;">Wil host (Project 2) when website is complete</p>
   <p style="font-size: 1.2em;">Created in college, started as a friends/neighbor service</p>
   <p style="font-size: 1.2em;">and decided to expand to a legitimate business</p>
@@ -165,7 +181,7 @@
 <div class="jumbotron">
 <div class="main">
   <div class="">
-  <p>Project 7: Vestige Food Waste Solutions Startup</p>
+  <p>Project 8: Vestige Food Waste Solutions Startup</p>
   <p style="font-size: 1em;color: #2477BB"> <i> Vestige is a digital platform that develops and implements</p>
     <p style="font-size: 1em;color: #2477BB">food waste management solutions for businesses and resteraunts.</i></p>
     <p style="font-size: 1em;">Please contact me, or AJ Nowell, our CEO for more information</p>
@@ -183,7 +199,7 @@
 <div class="jumbotron">
 <div class="main">
   <div class="">
-  <p>Project 8: Musuem of JDM</p>
+  <p>Project 9: Musuem of JDM</p>
   <p style="font-size: 1em;">Made with Bootsrap, HTML, css</p>
   <p style="font-size: 1em;">Web Deveoper Bootcamp</p>
 
@@ -221,7 +237,7 @@
 <div class="jumbotron">
 <div class="main">
   <div class="">
-  <p>Project 9: Image Gallery Site</p>
+  <p>Project 10: Image Gallery Site</p>
   <p style="font-size: 1em;">Made with HTML, css</p>
   <p style="font-size: 1em;">Web Deveoper Bootcamp</p>
 </div>
@@ -236,7 +252,7 @@
 <div class="jumbotron">
 <div class="main">
   <div class="">
-  <p>Project 10:Kitten Adoption Landing Page</p>
+  <p>Project 11:Kitten Adoption Landing Page</p>
   <p style="font-size: 1em;">Made HTML, css</p>
   <p style="font-size: 1em;">Web Developer Bootcamp</p>
 </div>
@@ -251,7 +267,7 @@
 <div class="jumbotron">
 <div class="main">
   <div class="">
-  <p>Project 11: Another Gallery site</p>
+  <p>Project 12: Another Gallery site</p>
   <p style="font-size: 1em;">Made HTML, css</p>
   <p style="font-size: 1em;">Web Developer Bootcamp</p>
 </div>
@@ -263,7 +279,7 @@
 
 
 
-
+<!--
 <a href="https://ucdfixedgear.github.io/">
 <div class="container">
 <div class="jumbotron">
@@ -279,7 +295,7 @@
 </div>
 </div></a>
 
-
+ -->
 
 
 <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
